--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditExtension.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditExtension.cshtml
@@ -602,7 +602,7 @@
                            }
 
                        } else {
-                           toastMixin.fire({ title: 'No se encontró el material de referencia.', icon: 'warning' });
+                           toastMixin.fire({ title: 'No se encontró el material de referencia en la planta indicada.', icon: 'warning' });
                            hot.setDataAtCell(row, GetColFromName("Valido"), "falso");
                        }
                    }
