--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
@@ -375,8 +375,8 @@
         var documento_soporte_cambios = 1;
         var hot;
 
-        var headers = ['ID', 'Nuevo Material', 'Material Existente', 'Tipo de Material', 'Planta', 'Motivo de la creacion', 'Tipo Metal', 'Selling Type (Budget)',
-            'Núm. antigüo material', 'Peso Bruto (KG)', 'Peso Neto (KG)', 'Unidad Base Medida','Descripción (Original)', 'Descripción (ES)', 'Descripción (EN)', 'Commodity', 'Grado/Calidad',
+        var headers = ['ID','Cambios', 'Nuevo Material', 'Material Existente', 'Tipo de Material', 'Planta', 'Motivo de la creacion', 'Tipo Metal', 'Selling Type (Budget)',
+            'Núm. antigüo material', 'Peso Bruto (KG)', 'Peso Neto (KG)', 'Unidad Base Medida', 'Descripción ES (Original)', 'Descripción EN (Original)' ,  'Descripción (ES)', 'Descripción (EN)', 'Commodity', 'Grado/Calidad',
             'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)',
             'Ancho (mm)', 'Tolerancia ancho negativa (mm)', 'Tolerancia ancho positiva (mm)',
             'Avance (mm)', 'Tolerancia avance negativa (mm)', 'Tolerancia avance positiva (mm)',
@@ -455,7 +455,7 @@
             hot = new Handsontable(container, {
                 autoWrapRow: true,
                 nestedHeaders: [
-                    ['', { label: 'Material Existente', colspan: 7 }, { label: 'Datos Base', colspan: 7 }, { label: 'Clasificación', colspan: 22 }, { label: 'Otros Datos', colspan: 2 }],
+                    ['', { label: 'Material Existente', colspan: 8 }, { label: 'Datos Base', colspan: 8 }, { label: 'Clasificación', colspan: 22 }, { label: 'Otros Datos', colspan: 2 }],
                     headers
                 ],
                 //colHeaders: headers,
@@ -486,9 +486,11 @@
                             case GetColFromName("Nuevo Material"):
                             case GetColFromName("Otro Dato"):
                             case GetColFromName("Comentario Adicional"):
-                            case GetColFromName("Descripción (Original)"):
+                            case GetColFromName("Descripción ES (Original)"):
+                            case GetColFromName("Descripción EN (Original)"):
                             case GetColFromName("Descripción (ES)"):
                             case GetColFromName("Descripción (EN)"):
+                            case GetColFromName("Cambios"):
                                 applyClass(TH, 'HTgreen');
                                 break;
                             case GetColFromName("Material Existente"):
@@ -526,6 +528,7 @@
                     }
                 },
                  columns: [
+                    { readOnly: true }, //hidden
                     { readOnly: true }, //hidden
                     { readOnly: true },  //num material
                     { //material existente
@@ -629,7 +632,8 @@
                             }
                         }
                      },
-                     { readOnly: true },  //descripción original
+                     { readOnly: true },  //descripción original ES
+                     { readOnly: true },  //descripción original EN
                      { //descripcion ES
                          readOnly: false,
                          validator: function (value, callback) {
@@ -851,6 +855,7 @@
 
                 ],
                 colWidths: [0, //ID
+                    0, //cambios
                     150,//nuevo material
                     130,//material existente
                     150,//tipo de material
@@ -862,7 +867,7 @@
                     120, //peso neto
                     120, //peso bruto
                     130,//unidad base medida
-                    310, 310, 310, //descripciones en/es
+                    310, 310, 310, 310, //descripciones en/es
                     180,//Commodity
                     220,//Grado Calidad
                     110,//Espesor mm
@@ -891,7 +896,7 @@
                 ],
                 hiddenColumns: {
                     // specify columns hidden by default
-                    columns: [0, GetColFromName("Valido")], //contains ID
+                    columns: [0, GetColFromName("Cambios"), GetColFromName("Valido")], //contains ID
                 },
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
@@ -907,18 +912,29 @@
                         // console.log('row= ' + row + ", prop=" + prop + ", oldValue=" + oldValue + ", newValue= " + newValue);
                         //determina los cambios a aplicar según la columna que se cambie
                         switch (prop) {
-                            case GetColFromName("Tipo de Material"): //tipo de Metal
-                            case GetColFromName("Tipo Metal"): //tipo de Metal
                             case GetColFromName("Espesor (mm)"): //espesor
-                            case GetColFromName("Ancho (mm)"): //ancho
-                            case GetColFromName("Avance (mm)"): //avance
-                            case GetColFromName("Grado/Calidad"): //grado
-                            case GetColFromName("Peso del recubrimiento"): //coating weight
-                                cambioDescripcion(row);
+                            case GetColFromName("Ancho (mm)"): //espesor
+                            case GetColFromName("Avance (mm)"): //espesor
+                            //case GetColFromName("Tipo de Material"): //tipo de Metal
+                            //case GetColFromName("Tipo Metal"): //tipo de Metal
+                            ////case GetColFromName("Espesor (mm)"): //espesor
+                            ////case GetColFromName("Ancho (mm)"): //ancho
+                            ////case GetColFromName("Avance (mm)"): //avance
+                            //case GetColFromName("Grado/Calidad"): //grado
+                            //case GetColFromName("Peso del recubrimiento"): //coating weight
+
+                             CambioDimensiones(row);
                                 break;
+
+                            //case GetColFromName("Tipo de Material"): //tipo de Metal
+                            //case GetColFromName("Tipo Metal"): //tipo de Metal
+                            //case GetColFromName("Grado/Calidad"): //grado
+                            //case GetColFromName("Peso del recubrimiento"): //coating weight
+                            //    toastMixin.fire({ title: 'Recuerda cambiar la descripción del material, de ser necesario.', icon: 'warning' });
+                            //break;
                             case GetColFromName("Núm. cliente"): //diametro interior
                                 RestableceMSA(row);
-                                cambioDescripcion(row);
+                                //cambioDescripcion(row);
                                 break;
 
                         }
@@ -977,7 +993,7 @@
                             changes[0][3] = Math.round(changes[0][3] * 1000) / 1000;
                         break;
                     //en caso de cambio en material existente
-                    case GetColFromName("Material Existente"):                    
+                    case GetColFromName("Material Existente"):
                         let nuevoMaterial = hot.getDataAtCell(changes[0][0], GetColFromName("Nuevo Material"));
                         if (!nuevoMaterial.includes("CreacionReferencia")) { //si ya está creado el materla
                             if (changes[0][2] != changes[0][3]) {
@@ -989,6 +1005,23 @@
                                 cargaDatosMaterialReferencia(changes[0][3], changes[0][0]);
                         }
                         break;
+                    case GetColFromName("Tipo de Material"): //tipo de Metal
+                    case GetColFromName("Tipo Metal"): //tipo de Metal
+                    case GetColFromName("Grado/Calidad"): //grado
+                    case GetColFromName("Peso del recubrimiento"): //coating weight
+
+                        if ((changes[0][2] != '' && typeof changes[0][2] !== 'undefined' && changes[0][2] != null) && changes[0][2] != changes[0][3]) //si no era vacio 
+                            
+                            setTimeout(() => {
+                              
+                                Swal.fire({
+                                    title: "¡Aviso!",
+                                    text: "Recuerda cambiar la descripción del material, de ser necesario.",
+                                    icon: "warning"
+                                });
+                            }, 700);
+                           
+                    break;
                 }
 
 
@@ -1038,12 +1071,10 @@
             hot.validateCells((valid) => {
                 if (valid) {
                     // ... code for validated cells
-
-
                     Swal.fire({
                         title: "<span style='color: #DD0000 '>¡Importante!</span>",
                         html: `
-                            <h4>Por favor, verifique que los datos ingresados en la solicitud son correctos. La descripción del material se calculó automáticamente, por lo que puede ser diferente a la del material original.</h4><br/> <br/>
+                            <h4>Favor de confirmar que los datos ingresados son correctos. </h4><br/> <br/>
                             <h3>¿Desea continuar?</h3>
                           `,
                         confirmButtonColor: "#008800",
@@ -1472,12 +1503,19 @@
                            hot.setDataAtCell(row, GetColFromName("Tipo Metal"), data[0].tipo_metal);
                            hot.setDataAtCell(row, GetColFromName("Tipo de Material"), data[0].tipo_material);
                            hot.setDataAtCell(row, GetColFromName("Selling Type (Budget)"), data[0].type_selling);
-                           hot.setDataAtCell(row, GetColFromName("Descripción (Original)"), data[0].descripcion_en);
+                           //hot.setDataAtCell(row, GetColFromName("Descripción ES (Original)"), data[0].descripcion_es);
+                           //hot.setDataAtCell(row, GetColFromName("Descripción EN (Original)"), data[0].descripcion_en);
                            hot.setDataAtCell(row, GetColFromName("Planta"), data[0].planta_string);
 
                            if (data[0].planta == plantaSapSolicitud) {
                                toastMixin.fire({ title: 'Se cargaron los datos correctamente', icon: 'success' });
                                hot.setDataAtCell(row, GetColFromName("Valido"), "true");
+
+                               setTimeout(() => {
+                                   hot.setDataAtCell(row, GetColFromName("Descripción (ES)"), data[0].descripcion_es);
+                                   hot.setDataAtCell(row, GetColFromName("Descripción (EN)"), data[0].descripcion_en);
+                               }, 500);
+
                            } else {
                              //  toastMixin.fire({ title: 'El material de referencia no corresponde con la planta de la solicitud: '+ data[0].planta+ ' != '+'@Html.Raw(String.Join(", ", @Model.SCDM_rel_solicitud_plantas.Select(x => x.plantas.codigoSap).Distinct().ToList()))', icon: 'warning' });
                                Swal.fire({
@@ -1515,7 +1553,84 @@
            });
         }
 
+        function CambioDimensiones(row) {
+
+            let descripcionES = hot.getDataAtCell(row, GetColFromName("Descripción (ES)"))
+            let descripcionEN = hot.getDataAtCell(row, GetColFromName("Descripción (EN)"))
+
+
+            if (descripcionES != null && descripcionEN != null) {
+
+                let dimensionesES = reemplazaDimension(descripcionES, row);
+                let dimensionesEN = reemplazaDimension(descripcionEN, row);
+
+                //español
+               hot.setDataAtCell(row, GetColFromName("Descripción (ES)"), dimensionesES);
+                //ingles
+                hot.setDataAtCell(row, GetColFromName("Descripción (EN)"), dimensionesEN);
+            }
+        }
+
+        function reemplazaDimension(text, row) {
+            //variables
+            let espesor = hot.getDataAtCell(row, GetColFromName("Espesor (mm)"));
+            let ancho = hot.getDataAtCell(row, GetColFromName("Ancho (mm)"));
+            let avance = hot.getDataAtCell(row, GetColFromName("Avance (mm)"));
+
+                 
+            //obtener el simbolo X o x
+            let charx = "x";
+            let charX = "X";
+            let charResult = "";
+            let index_x = text.indexOf(charx);
+            let index_X = text.indexOf(charX);
+
+            //si no se encuentra asigna un valor alto
+            if (index_x < 0)
+                index_x = 99;
+            if (index_X < 0)
+                index_X = 99;
+
+            if (index_x < index_X)
+                charResult = charx;
+            if (index_X < index_x)
+                charResult = charX;
+
+         
+
+            let codingRegex = /[(?<=^| )\d+(\.\d+)?(?=$| )]{1,9}[X|x][(?<=^| )\d+(\.\d+)?(?=$| )]{1,9}[X|x]*[(?<=^| )\d+(\.\d+)?(?=$| )]*/;
+            let result = text.match(codingRegex);
+
+       
+            if (result != null) {
+                let parteDimensiones = result[0].trim();
+               
+                //divide en partes
+                const dimensionesArray = parteDimensiones.split(charResult);
+                               
+
+                //identifica la dimension y susutituye
+                if (dimensionesArray.length >= 1 && Number(espesor) != Number(dimensionesArray[0]))
+                    dimensionesArray[0] = espesor;
+                if (dimensionesArray.length >= 2 && Number(ancho) != Number(dimensionesArray[1]))
+                    dimensionesArray[1] = ancho;
+                if (dimensionesArray.length >= 3 && Number(avance) != Number(dimensionesArray[2]))
+                    dimensionesArray[2] = avance;
+
+                let nuevaDimensiones = dimensionesArray.join(charResult);
+                //console.log("|"+parteDimensiones+"|")
+                //console.log("|" + nuevaDimensiones + "|")
+
+                return text.replace(parteDimensiones, nuevaDimensiones);
+            } else {
+                return text;
+            }
+        }
+
+
         function cambioDescripcion(row) {
+
+        
             let tipoMaterial = hot.getDataAtCell(row, GetColFromName("Tipo de Material"));
 
             let espesor = hot.getDataAtCell(row, GetColFromName("Espesor (mm)"));
