2024-08-23 Se corrige parametros en index de inventory item.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/index.cshtml
@@ -440,7 +440,7 @@
                                                         </a>
                                                         <a href="@Url.Action("Create", null, new {
                                                                 id = item.id,
-                                                                id_hardware_type = tipo_hardware,
+                                                                id_hardware_type = item.id_inventory_type,
                                                                 _id_planta = id_planta,
                                                                 _hostname = hostname,
                                                                 pagina = pagina,
