2023-08-23 Se completa formulario para budget.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditBudget.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditBudget.cshtml
@@ -284,6 +284,14 @@
                             </div>
                         </div>
                         <div class="col-sm-12">
+                            <div class="alert alert-2-secondary">
+                                <p class="alert-content">
+                                    <i class="fa-solid fa-triangle-exclamation" style="color: #ff9924;"></i> Los valores de Ancho, Largo y Avance en la vista de Budget, deben solicitarse a través de una solicitud de Cambio de Ingeniería.
+                               
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-sm-12">
 
                             <div class="wf-accordion-group js-accordion-group">
                                 @if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_BUDGET))
