--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
@@ -1606,6 +1606,12 @@
             catch {
                 console.log('No se pudo inicializar Tabla de Extensión de materiales.')
             }
+            try {
+                inicializaBudget();
+            }
+            catch {
+                console.log('No se pudo inicializar Tabla de Budget.')
+            }
 
             $.unblockUI();
         });
@@ -2637,6 +2643,179 @@
                     async: false
                 });
         }
+
+        function inicializaBudget() {
+            const container = document.querySelector('#hot_budget');
+
+            let colHeader = ['ID', 'Material Existente', 'Tipo Material', 'Planta', 'Peso bruto REAL bascula (kg)', 'Peso neto REAL bascula (kg)', 'Ángulo A', 'Ángulo B', 'Scrap permitido Puntas y Colas'
+                , 'Piezas Dobles', 'Reaplicación', 'Conciliación puntas y colas', 'Conciliación Scrap Ingenieria'
+                , 'Tipo de Metal', 'Tipo de Material', 'Tipo de Venta', 'Modelo de Negocio', 'Posición de Rollo'
+                , 'IHS num 1', 'IHS num 2', 'IHS num 3', 'IHS num 4', 'IHS num 5'
+                , 'Piezas por auto', 'Piezas por golpe', 'Piezas por paquete', 'Peso Inicial', 'Peso Máximo', 'Peso Maximo Tolerancia Positiva', 'Peso Maximo Tolerancia Negativa'
+                , 'Peso Minimo', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa'
+
+                , 'Valido'];
+
+            hot = new Handsontable(container, {
+                autoWrapRow: true,
+                nestedHeaders: [
+                    ['', { label: 'Material Existente', colspan: 3 }, { label: 'Nuevos Datos de Budget', colspan: 25 }],
+                    colHeader
+                ],
+                afterGetColHeader: function (col, TH) {
+                    var TR = TH.parentNode;
+                    var THEAD = TR.parentNode;
+                    var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
+
+                    function applyClass(elem, className) {
+                        if (!Handsontable.dom.hasClass(elem, className)) {
+                            Handsontable.dom.addClass(elem, className);
+                        }
+                    }
+
+                    if (col == -1) {
+                        applyClass(TH, 'HTgray');
+                    } else if (headerLevel === -2) {
+                        applyClass(TH, 'HTblue');
+                    } else {
+                        switch (col) {
+                            //case GetColFromName("Peso bruto REAL bascula (kg)"):
+                            //    applyClass(TH, 'HTPurple');
+                            //    break;
+                            case GetColFromName("Tipo Material", colHeader):
+                            case GetColFromName("Planta", colHeader):
+                                applyClass(TH, 'HTgreen', colHeader);
+                                break;
+                            case GetColFromName("Material Existente", colHeader):
+                                applyClass(TH, 'HTred');
+                                break;
+                            case GetColFromName("Peso bruto REAL bascula (kg)", colHeader):
+                            case GetColFromName("Peso neto REAL bascula (kg)", colHeader):
+                            case GetColFromName("Ángulo A", colHeader):
+                            case GetColFromName("Ángulo B", colHeader):
+                            case GetColFromName("Scrap permitido Puntas y Colas", colHeader):
+                            case GetColFromName("Piezas Dobles", colHeader):
+                            case GetColFromName("Reaplicación", colHeader):
+                            case GetColFromName("Conciliación puntas y colas", colHeader):
+                            case GetColFromName("Conciliación Scrap Ingenieria", colHeader):
+                            case GetColFromName("Tipo de Metal", colHeader):
+                            case GetColFromName("Tipo de Material", colHeader):
+                            case GetColFromName("Tipo de Venta", colHeader):
+                            case GetColFromName("Modelo de Negocio", colHeader):
+                            case GetColFromName("Posición de Rollo", colHeader):
+                            case GetColFromName("IHS num 1", colHeader):
+                            case GetColFromName("IHS num 2", colHeader):
+                            case GetColFromName("IHS num 3", colHeader):
+                            case GetColFromName("IHS num 4", colHeader):
+                            case GetColFromName("IHS num 5", colHeader):
+                            case GetColFromName("Piezas por auto", colHeader):
+                            case GetColFromName("Piezas por golpe", colHeader):
+                            case GetColFromName("Piezas por paquete", colHeader):
+                            case GetColFromName("Peso Inicial", colHeader):
+                            case GetColFromName("Peso Máximo", colHeader):
+                            case GetColFromName("Peso Maximo Tolerancia Positiva", colHeader):
+                            case GetColFromName("Peso Maximo Tolerancia Negativa", colHeader):
+                            case GetColFromName("Peso Minimo", colHeader):
+                            case GetColFromName("Peso Mínimo Tolerancia Positiva", colHeader):
+                            case GetColFromName("Peso Mínimo Tolerancia Negativa", colHeader):
+                                applyClass(TH, 'HTOrange');
+                                break;
+                        }
+                    }
+                },
+                columns: [
+                    { readOnly: true }, //hidden
+                    { renderer: "html" }, //boton para cambios
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden 
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+                    { readOnly: true }, //hidden
+
+                   
+                ],
+                hiddenColumns: {
+                    // specify columns hidden by default
+                    columns: [0, GetColFromName("Valido", colHeader)], //contains ID
+                },
+             
+                licenseKey: 'non-commercial-and-evaluation',
+                rowHeaders: true,
+                autoColumnSize: true,
+                //width: '100%',
+                height: 'auto',
+                readOnly: true,
+                manualColumnResize: true,
+                licenseKey: 'non-commercial-and-evaluation',
+
+            });
+
+            //carga datos iniciales
+            //llamada ajax para obtener el detalle del item  seleccionado
+                $.ajax({
+                    type: 'POST',
+                    url: '/SCDM_solicitud/CargaCambiosBudget',
+                    data: { id_solicitud: @Model.id},
+                    success: function (data) {
+                        try {
+                            if (data.length == 0) { //no existe informacion de rollos
+                                console.log('No data en cambio BUDGET')
+                                //oculta la tabla y muestra mensaje
+                                $("#budget_text").hide();
+                                $("#budget_text").show();
+                            } else { //existe información de rollos
+                                console.log(data);
+                                hot.loadData(data);
+                            }
+                        }
+                        catch (error) {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Error',
+                                text: 'Ocurrió un error obteniendo la información: ' + error,
+                                confirmButtonText: 'Aceptar',
+                            })
+                        }
+                    },
+                    error: function (errorMsg) {
+                        //Execute this function when the request fails
+                        Swal.fire({
+                            icon: 'error',
+                            text: 'Ocurrió un error al obtener la información.',
+                        })
+                    },
+                    async: false
+                });
+        }
+
+
         function muestraCambios(id_cambio, cambios) {
             //Show success message
             Swal.fire({
